[package]
name = "landing-pages"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
redis = { version = "0.27.0", features = ["tokio-comp"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
